# bin_thrower

./: bin_throw.js  game.js  index.html  input.js  main.js  map.json  matrix.js  render.js
assets/: Classroom_Extra.glb  row_1.glb  row_2.glb  row_3.glb
assets/models/: bin.glb
project/: .gitignore  Cargo.toml
project/.cargo/: config.toml
project/assets/: row_1.glb  row_2.glb  row_4.glb
project/assets/models/: paper_ball.glb
project/src/: main.rs
shaders/: default.wgsl  defaultb.wgsl  vertex.wgsl
